--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+.App{
+  background-color: rgb(255, 51, 0);
+  background-image: linear-gradient(rgb(255, 0, 0,0.7),rgb(0, 0, 255,0.7));
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 1px white;
+}
+
+.App h1{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.colorPad {
+  border: 1px solid rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 20px;
+  margin: 10px;
+  box-shadow: 0px 0px 10px 1px white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.uploadButton, #colorConverterButton {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 50px;
+  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(255, 220, 61,0.8);
+  font-size: 24px;
+}
+
+.uploadButton:hover,#colorConverterButton:hover {
+  box-shadow: 0px 0px 10px 1px black;
+}
+
+.imagePad {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1%;
+  border: 1px solid rgb(255, 255, 255);
+  margin: 1%;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 1px white;
+}
+
+.imagePad button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+}
+
+.imagePad h1, .colorPad h1{
+  text-align: center;
+}
+
+.imagePad img{
+  width: 30%;
+  margin-left: 35%;
+}
+
+#colorConverterButton {
+  padding: 20px;
+  width: 100%;
 }
